# config/default_config/api.yaml
@@ -23,7 +23,66 @@ corsorigin: "*"
 #*默認每 60 秒最多允许一个 IP 发送 100 次请求
 rateLimitwindowMs: 60000 #*时间窗口，单位为毫秒
 rateLimitmax: 100 #*每秒最大请求数
+#*鉴权token
+token: "为什么不玩原神"
 #*黑名单 IP 列表
 blacklistedIPs: []
 #*白名单 IP 列表
 whitelistedIPs: []
+
+apiList:
+  - name: '健康检查'
+    path: '/health'
+    method: 'GET'
+    description: '检查API服务是否正常运行'
+    authentication: false
+  - name: '访问数据'
+    path: '/stats'
+    method: 'GET'
+    description: '获取API访问统计数据'
+    authentication: true
+  - name: 'B站热榜'
+    path: '/bilibili/hot'
+    method: 'GET'
+    description: '获取BiliBili热榜'
+    authentication: false
+  - name: 'Steam热榜'
+    path: '/steam/hot'
+    method: 'GET'
+    description: '获取Steam热榜'
+    authentication: false
+  - name: 'Whois查询'
+    path: '/webtool/whois'
+    method: 'GET'
+    description: '获取域名的Whois信息'
+    authentication: false
+  - name: 'ICP备案查询'
+    path: '/webtool/icp'
+    key:
+      - name: '域名'
+        type: 'string'
+        required: true
+        description: '要查询的域名'
+    method: 'GET'
+    description: '获取域名的ICP备案信息'
+    authentication: false
+  - name: 'SEO查询'
+    path: '/webtool/seo'
+    key:
+      - name: '链接'
+        type: 'string'
+        required: true
+        description: '要查询的链接'
+    method: 'GET'
+    description: '获取链接的SEO信息'
+    authentication: false
+  - name: '游戏搜索'
+    path: '/search/game'
+    key:
+      - name: 'key'
+        type: 'string'
+        required: true
+        description: '游戏关键词'
+    method: 'GET'
+    description: '搜索单机破解游戏'
+    authentication: false
